<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/my_dons"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="79dp"
        android:layout_height="82dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="Home"
        android:background="@android:drawable/divider_horizontal_bright"
        android:backgroundTint="@color/background_green"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="603dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:padding="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/dona_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dona_desc_main"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="@string/bold" />

        <EditText
            android:id="@+id/enter_desc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_textbg"
            android:ems="10"
            android:hint="@string/entered"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/hint" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/qty"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="@string/bold" />

        <EditText
            android:id="@+id/qty_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_textbg"
            android:ems="10"
            android:hint="@string/qty_entered"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/hint" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="@string/bold" />

        <EditText
            android:id="@+id/phone_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_textbg"
            android:ems="10"
            android:hint="@string/phone_entered"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="158dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/img_plcholder" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/new_but"
                android:text="@string/upload"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="@string/bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:layout_weight="1"
                android:background="@drawable/delete_but"
                android:text="@string/delet_don"
                android:textColor="@color/white"
                android:textStyle="@string/bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/new_but"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="@string/bold" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>