<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green">

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/user"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="@string/bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/donation"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="@string/bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView20" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="@string/bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/forum"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="@string/bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginEnd="48dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:srcCompat="@drawable/product" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/donate_new" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/forum" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="571dp"
        android:layout_height="353dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@drawable/bottom_white" />

    <TextView
        android:id="@+id/topic2"
        android:layout_width="150dp"
        android:layout_height="65dp"

        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:text="@string/agriq"
        android:textColor="@color/teal_200"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView22" />

    <TextView
        android:id="@+id/topic"
        android:layout_width="151dp"
        android:layout_height="27dp"

        android:layout_marginStart="36dp"
        android:text="@string/Follow"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic3"
        app:layout_constraintVertical_bias="0.692" />

    <TextView
        android:id="@+id/topic3"
        android:layout_width="306dp"
        android:layout_height="27dp"

        android:layout_marginStart="36dp"
        android:text="@string/slogan"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic2" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/topic"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView23"
        app:srcCompat="@drawable/google" />


</androidx.constraintlayout.widget.ConstraintLayout>